2006-01-10  Roman Kennke  <kennke@aicas.com>

	* Makefile.am (EXTRA_DIST): Added ChangeLog-2004.
	* ChangeLog-2005: New File.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-nio/java_nio_VMDirectByteBuffer.c
	(get): Release the array with the correct pointer.
	(put): Release the array with the correct pointer. Copy the array
	around _before_ releasing it.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ViewportLayout.java
	(layoutContainer): Fixed condition, to avoid ClasscastException.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicSplitPaneDivider.java
	(MouseHandler.mousePressed): Fixed indendation.
	(MouseHandler.mouseDragged): Fixed indendation.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(playSound): Added @since 1.4 to the API docs.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(maybeUpdateLayoutState): Also update the layout state, if the
	list has been invalidated since the last update.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/ComponentUI.java
	(update): Fixed indendation.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ViewportLayout.java
	(layoutContainer): Fixed condition, so that Scrollable components
	are always forced to have to Viewport size, when they
	return true for getScrollableTracksViewportHeight() and ..Width().

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(validateInvalidComponents): Fixed condition to avoid NPE.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java:
	(static_initializer): Removed unused variable myScrollMode.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java:
	Cleared API docs a little.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/util/StringTokenizer.java
	(StringTokenizer(String, String, boolean)):